--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -488,22 +488,22 @@ div.error {
 .main .content .box .boxcontent #allMessages .boxfb .boxpost a.btnremove{float:left;width:15px;height:15px;background:red url(../img/btn/btn_removecolor.png) 0 0 no-repeat;cursor:pointer;position:absolute;top:3px;right:3px;text-indent:-9999px;}
 .main .content .box .boxcontent #allMessages .boxfb .boxpost img.photo{float:left;width:40px;height:40px;margin:3px 8px 3px 3px;background-color:#000000;}
 .main .content .box .boxcontent #allMessages .boxfb .boxpost span.date{float:left;margin:6px 0 0 0;font-size:10px;color:#aaaaaa;}
-.main .content .box .boxcontent #allMessages .boxfb .boxpost p{float:left;width:580px!important;margin:3px 0 0 0;}
+.main .content .box .boxcontent #allMessages .boxfb .boxpost p{float:left;width:580px!important;margin:3px 0;}
 .main .content .box .boxcontent #allMessages .boxfb .boxpost p.like{width:615px;margin:2px 0 0 0;}
 .main .content .box .boxcontent #allMessages .boxfb .boxpost p a{color:#445566;font-weight:bold;text-decoration:none;}
 .main .content .box .boxcontent #allMessages .boxfb .boxpost p a:hover{text-decoration:underline;}
 
-.main .content .box .boxcontent #allMessages .boxfb .boxpost form{float:left;width:598px;margin:3px 0 0 0;}
+.main .content .box .boxcontent #allMessages .boxfb .boxpost form{float:left;width:585px;margin:3px 0 0 0;}
 .main .content .box .boxcontent #allMessages .boxfb .boxpost form fieldset{float:left;width:100%;}
-.main .content .box .boxcontent #allMessages .boxfb .boxpost form fieldset textarea{float:left;width:495px;margin:0 0 5px 0;padding:3px 5px 11px 5px;color:#bcbcbc;font-size:12px;border:#aaaaaa 1px solid;resize:none;}
-.main .content .box .boxcontent #allMessages .boxfb .boxpost form fieldset input.btn{float:right;width:auto;height:63px;line-height:63px;margin:0;padding:0px 10px;color:#222222;font-size:12px;border:1px solid #BFBFBF;background-color:#EEEEEE;cursor:pointer;display:inline;}
+.main .content .box .boxcontent #allMessages .boxfb .boxpost form fieldset textarea{float:left;width:585px;margin:0 0 5px 0;padding:5px;color:#bcbcbc;font-size:12px;border:#aaaaaa 1px solid;resize:none;}
+.main .content .box .boxcontent #allMessages .boxfb .boxpost form fieldset input.btn{float:right;width:auto;margin:0 0 5px 0;padding:5px 10px 5px 10px;color:#222222;font-size:12px;font-weight: bold;border:1px solid #BFBFBF;background-color:#EEEEEE;cursor:pointer;display:inline;}
 .main .content .box .boxcontent #allMessages .boxfb .boxpost form fieldset input.btn:hover{background-color:#dfdfde;}
 
 .main .content .box .boxcontent .newpost span{float:left;width:748px!important;margin:3px 0 0 0;}
 .main .content .box .boxcontent .newpost form{float:left;width:748px;margin:3px 0 0 0;}
 .main .content .box .boxcontent .newpost form fieldset{float:left;width:100%;}
-.main .content .box .boxcontent .newpost form fieldset textarea{float:left;width:665px;margin:0 0 5px 0;padding:3px 5px 11px 5px;color:#bcbcbc;font-size:12px;border:#aaaaaa 1px solid;resize:none;}
-.main .content .box .boxcontent .newpost form fieldset input.btn{float:right;width:auto;height:63px;line-height:63px;margin:0;padding:0px 10px;color:#222222;font-size:12px;border:1px solid #BFBFBF;background-color:#EEEEEE;cursor:pointer;display:inline;}
+.main .content .box .boxcontent .newpost form fieldset textarea{float:left;width:735px;margin:0 0 5px 0;padding:5px;color:#bcbcbc;font-size:12px;border:#aaaaaa 1px solid;resize:none;}
+.main .content .box .boxcontent .newpost form fieldset input.btn{float:right;width:auto;margin:0 0 5px 0;padding:5px 10px 5px 10px;color:#222222;font-size:12px;font-weight: bold;border:1px solid #BFBFBF;background-color:#EEEEEE;cursor:pointer;display:inline;}
 .main .content .box .boxcontent .newpost form fieldset input.btn:hover{background-color:#dfdfde;}
 
 /* PRINTINGS ########################################################### */
@@ -603,8 +603,9 @@ ul.printings li{padding:5px 0;}
 .timecolor4{background-color:#AAFFAA;}
 /*BOX TABELA COMPROMISSO ####################################################################*/
 .schedule table.compromissos{float:left;width:100%;clear:both;}
+.schedule table.compromissos tr td{vertical-align:middle;}
 .schedule table.compromissos tr td input.time{width:58px!important;margin:0 10px 0 0;}
-.schedule table.compromissos tr td input.checkbox{margin:-20px 0 0 38px;}
+.schedule table.compromissos tr td input.checkbox{float:none;margin:0 0 0 30px;}
 .schedule table.compromissos tr td a.btnpeopleedit{margin:0 10px 0 0;}
 
 
