--- a/reports/financialReport.jrxml
+++ b/reports/financialReport.jrxml
@@ -298,7 +298,7 @@
 				</textElement>
 				<text><![CDATA[Valor Total:]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="699" y="3" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{total})]]></textFieldExpression>
