--- a/reports/financialReport.jrxml
+++ b/reports/financialReport.jrxml
@@ -245,14 +245,14 @@
 				<textElement>
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Total de Assistentes]]></text>
+				<text><![CDATA[Total de Assist.]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="405" y="26" width="120" height="20"/>
 				<textElement>
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Total de Procedimentos]]></text>
+				<text><![CDATA[Total de Proced.]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="531" y="26" width="100" height="20"/>
